# agentic-swarm-platform

./: .env.example  .gitignore  CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_USAGE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  TOS_COMPLIANCE.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt  setup.py  verify_setup.py
.github/workflows/: ci.yml
config/: default.yaml
examples/: sample_prd.md
src/: __init__.py  main.py
src/agents/: agent_pool.py  analysis_agent.py  base_agent.py  code_agent.py  docs_agent.py  test_agent.py
src/communication/: __init__.py  event_bus.py  shared_context.py  state_manager.py
src/core/: orchestrator.py  prd_parser.py  result_aggregator.py  task_queue.py
src/models/: __init__.py  agent.py  config.py  prd.py  result.py  task.py
src/services/: claude_client.py  claude_code_backend.py  claude_code_client.py  cost_tracker.py  interactive_backend.py  rate_limiter.py
src/utils/: errors.py  logger.py  retry.py
tests/: __init__.py  test_claude_code_client_async.py  test_models.py
